# utility_calculator

./: Makefile  README.md  pyproject.toml  requirements.txt  utility_calculator.py
.devcontainer/: devcontainer.json
data/: utility_payments.json
utility_calculator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
