[project]
name = "utility-calculator"
version = "0.1.0"
description = "Streamlit application for calculating utility payments."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "streamlit>=1.25.0",
    "pandas>=1.5.3"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]




